fietst: last changes
